fix issues with social icons on mobile

--- a/css/page.scss
+++ b/css/page.scss
@@ -202,3 +202,8 @@ a.footnote:after {
 .content audio {
 	width: 100%;
 }
+
+.navbar-end {
+	display: flex;
+	flex-direction: row;
+}
